Conexion con la base de datos

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySqlConnection": "Server=b0p2hp3io42dq6kk2agc-mysql.services.clever-cloud.com;Port=3306;Database=b0p2hp3io42dq6kk2agc;Uid=uvnq7xlob11nk9se;Pwd=uc7Rc8hwwpedEc23SqCM;"
+  }
 }
